fix centering whitespace stupidity, name and gender divs on one line

--- a/search/css/panda.css
+++ b/search/css/panda.css
@@ -157,6 +157,8 @@ div.search {
     }
 
     div.pandaGender {
+        margin-left: 0px;
+        margin-right: 0px;
         padding-left: 0px;
     }
 
